Post-v3.6.0
--------------------
   - TLS:
     * Added support for TLS Server Name Indication (SNI) with the new
       --ssl-server-name option.  This allows specifying the server name
       for SNI, which is useful when connecting through proxies or service
       meshes where the connection endpoint differs from the intended
       server name.  Without this option, the hostname from the connection
       string is used for SNI, as before.
   - Userspace datapath:
     * Conntrack now supports the FTP commands EPSV and EPRT with IPv4
       connections, instead of limiting these commands to IPv6 only.
   - DPDK:
     * Add support for DPDK 25.11.
   - OVSDB-IDL:
     * New ovsdb_idl_txn_assert_read_only() interface to mark transactions
       as read-only and trigger assertion failure when application attempts
       to modify the database data through this transaction.
   - Windows Support
     * Support for compiling for and running on Windows has been deprecated.
   - Deprecation of support for running OVS user-space with OOT kernel module
     * The OOT kernel module refers to the kernel module that was
       previously distributed as part of OVS - out of tree (OOT) from the
       perspective of the upstream Kernel tree.
     * The OOT kernel module: was deprecated in v2.15; was last present in
       the v2.17 release; and is no longer present in any supported release
       since v2.17 went EOL when v3.5 was released.


v3.6.0 - 18 Aug 2025
--------------------
   - Bonding:
     * Bond rebalancing log messages of INFO log level are highly reduced: they
       are now printed once in rebalance run.  Previous detailed log messages
       have been moved to the DBG log level.
   - DPDK:
     * New debug appctl command 'dpdk/get-memzone-stats'.
     * Removed upper limit for the number of rx/tx descriptors (n_r/txq_desc).
     * OVS validated with DPDK 24.11.2.
   - OVSDB performance: